--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
+    --border-radius: 25%;
     --border: 4px solid #070B34;
     --color: #855988;
+    --background: #2B2F77;
 }
 
 * {
@@ -14,6 +16,10 @@
 body {
     overflow-x: hidden;
     color: var(--color);
+}
+p {
+    text-align: center;
+    justify-content: center;
 }
 
 /*hero section properties*/
@@ -59,17 +65,13 @@ body {
     text-align: center;
  }
 
-/*nav bar contect properties*/
-nav a {
-    margin-right: 20px;
-    text-align: right;
-    justify-content: center;
+/*nav bar connect properties*/
+nav {
+    text-align: end;
+    word-spacing: 35px;
 }
 
-Main {
-    width: 1280px;
-    margin: auto;
-}
+
 /*nav bar*/
 header {
     width: 100%;
@@ -79,15 +81,69 @@ header {
     background-color: #DBE9F5;
 }
 /*main contents*/
-#about, #projects, #contact {
-    width: 100%;
-    height: 500px;
-    border: var(--border);
-    text-align: center;
-    margin-bottom: 3px;
-    margin-top: 3px;
+ .container {
+     width: 90%;
+     overflow: hidden;
+     background: var(--background);
+     margin: 20px auto;
+     padding: 20px;
+     height: 500px;
+     position: relative;
+     border-radius: 3%;
+ }
+
+ .container h1 {
+     text-align: center;
+     background-color: #070B34;
+     color: whitesmoke;
+     width: 100%;
+     height: 50px;
+     line-height: 50px;
+     position: relative;
+
+ }
+
+ .contact {
+     float: left;
+     width: 50%;
+     background-color: white;
+     padding: 20px 20px 20px 20px;
+     margin: 10px 10px 10px 10px;
+ }
+
+
+div h1 {
+    font-size: x-large;
 }
 
-h1 {
-    font-size: x-large;
+menu p {
+    text-align: center;
+}
+
+/*Send Button for email*/
+.button {
+    border-radius: 2px;
+}
+
+.button a {
+    padding: 8px 12px;
+    border: var(--border);
+    border-radius: 2px;
+    font-size: 14px;
+    color: #ffffff; 
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;  
+}
+
+/*email containers*/
+.contact {
+
+}
+
+/*footer properties*/
+footer {
+    text-align: center;
+    border: var(--border);
+    padding: 5px 5px 5px 5px;
 }
