--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --border-radius: 25%;
     --border: 4px solid #070B34;
-    --color: #855988;
+    --color: whitesmoke;
     --background: #2B2F77;
 }
 
@@ -87,7 +87,7 @@ header {
      background: var(--background);
      margin: 20px auto;
      padding: 20px;
-     height: 500px;
+     height: auto;
      position: relative;
      border-radius: 3%;
  }
@@ -100,9 +100,57 @@ header {
      height: 50px;
      line-height: 50px;
      position: relative;
-
  }
 
+.photo {
+    width: 192px;
+    height: 293px;
+    display: flex;
+}
+
+#float1 {
+    float:right;
+}
+
+/*sample work grid*/
+.grid {
+  display: flex;
+  /* Forces elements to the next line if they don't fit */
+  flex-wrap: wrap;
+  margin-top: 2%;
+}
+
+.main-header {
+  display: flex;
+  /* Forces elements to the next line if they don't fit */
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 60px;
+  background: #070B34;
+  color: #fff;
+}
+
+.card {
+  flex: 1 0 0;
+  padding: 10px;
+  text-align: center;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.card header {
+  padding: 20px;
+  background:#070B34;
+  color: #fff;
+}
+
+.card img {
+  width: 100%;
+  min-width: 400px;
+}
+
+
+/*email conatiner*/
  .contact {
      float: left;
      width: 50%;
@@ -138,7 +186,9 @@ menu p {
 
 /*email containers*/
 .contact {
-
+    text-align: center;
+    border: var(--border);
+    padding: 5px 5px 5px 5px;
 }
 
 /*footer properties*/
@@ -146,4 +196,5 @@ footer {
     text-align: center;
     border: var(--border);
     padding: 5px 5px 5px 5px;
+    color:#13293d;
 }
