--- a/style.css
+++ b/style.css
@@ -115,14 +115,21 @@ header {
 
  /*my photo properties*/
 .photo {
-    width: 325px;
+    width: 337px;
     height: 293px;
+    border-radius: 100%;
+    margin: 30px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*about me text properties*/
 #float1 {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin: 10px;
+    display: wrap;
 }
 
 /*grid properties*/
@@ -158,11 +165,27 @@ header {
 .card img {
   width: 100%;
   min-width: 400px;
+  transition: all .2s ease-in-out; 
 }
 
+.card img:hover {
+    transform: scale(1.1);
+}
+
+/*contact secion*/
+/*icon properties*/
+#git, #linkedin {
+    width: 50px;
+    height: 50px;
+    transition: all .2s ease-in-out; 
+}
+        
+#git:hover, #linkedin:hover { 
+    transform: scale(1.3); 
+}
 
 /*email conatiner*/
- .contact {
+ .contact1 {
      float: left;
      width: 50%;
      background-color: white;
