--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap');
+
 :root {
     --border-radius: 25%;
     --border: 4px solid #070B34;
@@ -8,7 +10,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Noto serif", sans-serif;
 }
 
 body {
@@ -99,7 +101,7 @@ header {
      padding: 20px;
      height: auto;
      position: relative;
-     border-radius: 3%;
+     
  }
 
  /*main section titles properties*/
@@ -117,7 +119,7 @@ header {
 .photo {
     width: 337px;
     height: 293px;
-    border-radius: 100%;
+    border-radius: 150%;
     margin: 30px;
     display: flex;
     justify-content: center;
