--- a/style.css
+++ b/style.css
@@ -176,13 +176,17 @@ header {
 
 /*contact secion*/
 /*icon properties*/
-#git, #linkedin {
+#git, #linkedin, #resume {
     width: 50px;
     height: 50px;
     transition: all .2s ease-in-out; 
 }
         
 #git:hover, #linkedin:hover { 
+    transform: scale(1.3); 
+}
+
+#git:hover, #resume:hover { 
     transform: scale(1.3); 
 }
 
